--- a/style.css
+++ b/style.css
@@ -28,9 +28,15 @@ button {
     border: 1px dotted black;
 }
 
-h4
-{
+.copy_right_footer {
     background-color: #f5f5f5;
     line-height: 2;
-    margin: 0px;
+    margin-bottom:0;
+}
+
+canvas {
+    border: 2px solid white;
+    border-radius: 10px;
+    margin-top: 130px;
+    box-shadow: 5px 5px 5px white;
 }
