--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
-body
+
+.heading
 {
- background-size: cover;
- text-align: center;
+width: 100%;
+text-align: left;
+}
+.heading h3{
+    display: inline;
 }
 
 .heading button{
@@ -9,34 +13,29 @@ body
     border: 1px solid white;
 }
 
-.heading h3 {
-    display: inline;
-    float: top;
+#start ,#status, #restart
+{
+font-size: 22px;
 }
 
-.play {
-    font-size: 22px;
+.modal-dialog
+{
+    width: 70%;
 }
-
-.heading {
-    width: 100%;
+.modal-body
+{
     text-align: left;
+    font-size: 20px;
 }
-
-button {
-    border-radius: 20px;
-    border: 1px dotted black;
+h4
+{
+   background-color: grey;
+   color:white;
+   line-height: 2;
 }
-
-.copy_right_footer {
-    background-color: #f5f5f5;
-    line-height: 2;
-    margin-bottom:0;
-}
-
-canvas {
-    border: 2px solid white;
-    border-radius: 10px;
-    margin-top: 130px;
-    box-shadow: 5px 5px 5px white;
-}
+canvas 
+  {
+      border:3px solid white;
+      border-radius: 20px;
+      box-shadow:  5px 5px 5px white;
+  }
